test/lexer/file-expand-04.hac
// "file-expand-04.hac"
// line 2: expect-fail
#FILE "wrapper.hac" %{
#FILE "bogus.hac" %{

bool x;

%} // #FILE "bogus.hac"
#FILE "bogus2.hac" %{
bool y;
%} // #FILE "bogus2.hac"
%} // #FILE "wrapper.hac"
// line 4
bool error here;        // line 5 -- error should point here

